--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>React App</title>
+    <script src="https://kit.fontawesome.com/786c3e4904.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;0,400;0,700;1,700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
